<resources>
    <string name="app_name">ThreeInOne</string>
    <string name="ship">Ship</string>
    <string name="player">Player</string>
    <string name="mines">Mines</string>
    <string name="shop">Shop</string>
    <string name="back">Back</string>
    <string name="shipTab">Ship Upgrades</string>
    <string name="playerTab">Player Upgrades</string>
    <string name="mineTab">Mine Upgrades</string>
    <string name="economicsTab">Economics</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="price">Buy Price</string>
    <string name="buy_sell">Buy/Sell</string>
    <string name="quantity">Inventory</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="enter_value">Enter Value</string>
    <string name="Copper">Copper</string>
    <string name="Aluminum">Aluminum</string>
    <string name="Iron">Iron</string>
    <string name="Silver">Silver</string>
    <string name="Tungsten">Tungsten</string>
    <string name="Osmium">Osmium</string>
    <string name="Platinum">Platinum</string>
    <string name="Gold">Gold</string>
    <string name="Diamond">Diamond</string>
    <string name="Uranium">Uranium</string>
    <string name="buy_successful">Buy Successful</string>
    <string name="buy_unsuccessful">Buy Unsuccessful</string>
    <string name="sell_successful">Sell Successful</string>
    <string name="sell_unsuccessful">Sell Unsuccessful</string>
    <string name="galaxyOneName">Name</string>
    <string name="galaxyTwoName">Name</string>
    <string name="galaxyThreeName">Name</string>
    <string name="inGameVolume">Enable/Disable InGame Volume</string>
    <string name="changeLanguage">Change Language</string>
    <string name="volumeEnabled">Volume Enabled</string>
    <string name="volumeDisabled">Volume Disabled</string>
    <string name="languageOne">English</string>
    <string name="languageTwo">Japanese</string>
    <string name="languageThree">Spanish</string>
    <string name="languageFour">Chinese</string>
    <string name="selectPlanet">Select Planet</string>
    <string name="Fire">Fire</string>
    <string name="I">I</string>
    <string-array name="galaxyOneSolarSystems">
        <item>Galaxy1</item>
        <item>Galaxy1</item>
        <item>Galaxy1</item>
    </string-array>
    <string-array name="galaxyTwoSolarSystems">
        <item>Galaxy2</item>
        <item>Galaxy2</item>
        <item>Galaxy2</item>
    </string-array>
    <string-array name="galaxyThreeSolarSystems">
        <item>Galaxy3</item>
        <item>Galaxy3</item>
        <item>Galaxy3</item>
    </string-array>
    <string-array name="galaxyOneSystemOnePlanets">
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
    </string-array>
    <string-array name="galaxyOneSystemTwoPlanets">
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
    </string-array>
    <string-array name="galaxyOneSystemThreePlanets">
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
    </string-array>
    <string-array name="galaxyTwoSystemOnePlanets">
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
    </string-array>
    <string-array name="galaxyTwoSystemTwoPlanets">
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
    </string-array>
    <string-array name="galaxyTwoSystemThreePlanets">
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
    </string-array>
    <string-array name="galaxyThreeSystemOnePlanets">
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
    </string-array>
    <string-array name="galaxyThreeSystemTwoPlanets">
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
    </string-array>
    <string-array name="galaxyThreeSystemThreePlanets">
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
        <item>PlanetOne</item>
    </string-array>
    <string-array name="galaxyOneSystemOnePlanetOne">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyOneSystemOnePlanetTwo">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyOneSystemOnePlanetThree">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyOneSystemOnePlanetFour">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyOneSystemOnePlanetFive">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyOneSystemTwoPlanetOne">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyOneSystemTwoPlanetTwo">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyOneSystemTwoPlanetThree">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyOneSystemTwoPlanetFour">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyOneSystemTwoPlanetFive">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyOneSystemThreePlanetOne">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyOneSystemThreePlanetTwo">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyOneSystemThreePlanetThree">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyOneSystemThreePlanetFour">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyOneSystemThreePlanetFive">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyTwoSystemOnePlanetOne">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyTwoSystemOnePlanetTwo">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyTwoSystemOnePlanetThree">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyTwoSystemOnePlanetFour">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyTwoSystemOnePlanetFive">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyTwoSystemTwoPlanetOne">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyTwoSystemTwoPlanetTwo">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyTwoSystemTwoPlanetThree">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyTwoSystemTwoPlanetFour">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyTwoSystemTwoPlanetFive">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyTwoSystemThreePlanetOne">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyTwoSystemThreePlanetTwo">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyTwoSystemThreePlanetThree">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyTwoSystemThreePlanetFour">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyTwoSystemThreePlanetFive">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyThreeSystemOnePlanetOne">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyThreeSystemOnePlanetTwo">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyThreeSystemOnePlanetThree">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyThreeSystemOnePlanetFour">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyThreeSystemOnePlanetFive">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyThreeSystemTwoPlanetOne">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
    <string-array name="galaxyThreeSystemTwoPlanetTwo">
        <item>Name:</item>
        <item>Level Range:</item>
        <item>Galaxy:</item>
        <item>System:</item>
    </string-array>
</resources>