<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/resourceImage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/resourceDefaultName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/resourceImage"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/name"/>

    <TextView
        android:id="@+id/resourceBuyPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/resourceImage"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/price"/>

    <TextView
        android:id="@+id/resourcePlayerQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/resourceImage"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/quantity"/>

    <TextView
        android:id="@+id/resourceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resourceDefaultName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/resourcePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resourceBuyPrice"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/resourceQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resourcePlayerQuantity"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/buyTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resourcePrice"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/buy"
        android:layout_marginTop="60dp"/>

    <EditText
        android:id="@+id/resourceSetQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buyTag"
        android:layout_marginTop="10dp"
        android:text="@string/enter_value"/>

    <TextView
        android:id="@+id/resourceTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/buyTag"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        android:text="0"/>

    <Button
        android:id="@+id/buyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/buyTag"
        android:layout_marginTop="10dp"
        android:text="@string/buy"/>

    <TextView
        android:id="@+id/sellTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resourceTotalPrice"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/sell"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/resourceSetSellQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sellTag"
        android:layout_marginTop="10dp"
        android:text="@string/enter_value"/>

    <TextView
        android:id="@+id/resourceTotalSellPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sellTag"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        android:text="0"/>

    <Button
        android:id="@+id/sellButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/sellTag"
        android:layout_marginTop="10dp"
        android:text="@string/sell"/>

</RelativeLayout>